<?php

namespace App\Models;

use App\Services\PriorityEvaluator;
use Carbon\Carbon;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Cita extends Model
{
    use HasFactory;

    protected $table = 'citas_medicas';

    protected $fillable = [
        'paciente_id',
        'doctor_id',
        'especialidad_id',
        'fecha',
        'hora',
        'motivo_consulta',
        'estado',
        'activo',
        'prioridad_nivel',
        'prioridad_fuente',
        'prioridad_red_flag',
        'prioridad_red_flag_tipo',
        'prioridad_comentario',
        'prioridad_es_adulto_mayor',
        'prioridad_es_embarazo',
        'prioridad_es_discapacidad',
        'prioridad_es_cronico',
    ];

    public const ESTADO_PENDIENTE  = 'pendiente';
    public const ESTADO_CONFIRMADA = 'confirmada';
    public const ESTADO_CANCELADA  = 'cancelada';
    public const ESTADO_REALIZADA  = 'realizada';
    public const ESTADO_NO_SE_PRESENTO = 'no_se_presento';

    public const PRIORIDAD_BAJA = 'BAJA';
    public const PRIORIDAD_MEDIA = 'MEDIA';
    public const PRIORIDAD_ALTA = 'ALTA';

    public const PRIORIDAD_NIVELES = [
        self::PRIORIDAD_BAJA,
        self::PRIORIDAD_MEDIA,
        self::PRIORIDAD_ALTA,
    ];

    public const FUENTE_PRIORIDAD_AUTOMATICA = 'AUTOMATICA';
    public const FUENTE_PRIORIDAD_REGLA_RED_FLAG = 'REGLA_RED_FLAG';
    public const FUENTE_PRIORIDAD_REGLA_VULNERABILIDAD = 'REGLA_VULNERABILIDAD';
    public const FUENTE_PRIORIDAD_MANUAL = 'MANUAL';

    public const ESTADOS = [
        self::ESTADO_PENDIENTE,
        self::ESTADO_CONFIRMADA,
        self::ESTADO_CANCELADA,
        self::ESTADO_REALIZADA,
        self::ESTADO_NO_SE_PRESENTO,
    ];

    protected $casts = [
        'fecha'  => 'date',
        'hora'   => 'string',
        'activo' => 'boolean',
        'motivo_consulta' => 'string',
        'prioridad_nivel' => 'string',
        'prioridad_fuente' => 'string',
        'prioridad_red_flag' => 'boolean',
        'prioridad_red_flag_tipo' => 'string',
        'prioridad_comentario' => 'string',
        'prioridad_es_adulto_mayor' => 'boolean',
        'prioridad_es_embarazo' => 'boolean',
        'prioridad_es_discapacidad' => 'boolean',
        'prioridad_es_cronico' => 'boolean',
    ];

    public function paciente()
    {
        return $this->belongsTo(User::class, 'paciente_id');
    }

    public function doctor()
    {
        return $this->belongsTo(User::class, 'doctor_id');
    }

    public function especialidad()
    {
        return $this->belongsTo(Especialidad::class);
    }

    /** Relación con factura (una factura por cita) */
    public function factura()
    {
        return $this->hasOne(Factura::class, 'cita_id');
    }

    public function pago()
    {
        return $this->hasOne(Pago::class, 'cita_id');
    }

    /** Relación con receta (una receta por cita) */
    public function receta()
    {
        return $this->hasOne(Receta::class, 'cita_id');
    }

    /** Relación con nota SOAP (una nota por cita) */
    public function notaSoap()
    {
        return $this->hasOne(NotaSoap::class, 'cita_id');
    }

    public function laboratorioOrden()
    {
        return $this->hasOne(LaboratorioOrden::class, 'cita_id');
    }

    public function refreshPriority(): bool
    {
        $original = [
            'prioridad_nivel' => (string) $this->prioridad_nivel,
            'prioridad_fuente' => (string) $this->prioridad_fuente,
            'prioridad_red_flag' => (bool) $this->prioridad_red_flag,
            'prioridad_red_flag_tipo' => $this->prioridad_red_flag_tipo,
            'prioridad_es_adulto_mayor' => (bool) $this->prioridad_es_adulto_mayor,
            'prioridad_es_embarazo' => (bool) $this->prioridad_es_embarazo,
            'prioridad_es_discapacidad' => (bool) $this->prioridad_es_discapacidad,
            'prioridad_es_cronico' => (bool) $this->prioridad_es_cronico,
        ];

        app(PriorityEvaluator::class)->apply($this);

        return $original['prioridad_nivel'] !== (string) $this->prioridad_nivel
            || $original['prioridad_fuente'] !== (string) $this->prioridad_fuente
            || $original['prioridad_red_flag'] !== (bool) $this->prioridad_red_flag
            || $original['prioridad_red_flag_tipo'] !== $this->prioridad_red_flag_tipo
            || $original['prioridad_es_adulto_mayor'] !== (bool) $this->prioridad_es_adulto_mayor
            || $original['prioridad_es_embarazo'] !== (bool) $this->prioridad_es_embarazo
            || $original['prioridad_es_discapacidad'] !== (bool) $this->prioridad_es_discapacidad
            || $original['prioridad_es_cronico'] !== (bool) $this->prioridad_es_cronico;
    }

    public static function prioridadRank(string $nivel): int
    {
        return match (strtoupper($nivel)) {
            self::PRIORIDAD_ALTA => 3,
            self::PRIORIDAD_MEDIA => 2,
            default => 1,
        };
    }

    public static function prioridadOrderSql(string $column = 'prioridad_nivel'): string
    {
        return "CASE {$column} WHEN 'ALTA' THEN 1 WHEN 'MEDIA' THEN 2 ELSE 3 END";
    }

    public function inicioProgramado(string $tz = 'America/Guayaquil'): Carbon
    {
        $fecha = $this->fecha instanceof Carbon
            ? $this->fecha->copy()
            : Carbon::parse($this->fecha, $tz);
        $hora = $this->hora ? substr((string) $this->hora, 0, 5) : '00:00';
        return Carbon::parse($fecha->format('Y-m-d').' '.$hora, $tz);
    }

    public function finProgramado(string $tz = 'America/Guayaquil', int $duracionMin = 30): Carbon
    {
        return $this->inicioProgramado($tz)->addMinutes($duracionMin);
    }

    public function estaVencida(string $tz = 'America/Guayaquil', int $duracionMin = 30): bool
    {
        return Carbon::now($tz)->greaterThanOrEqualTo(
            $this->finProgramado($tz, $duracionMin)
        );
    }
}

