@startuml
hide empty members
skinparam shadowing false
skinparam classAttributeIconSize 0

package "Usuarios y acceso" {
  class User {
    +id : bigint
    +name : string
    +email : string
    +telefono : string
    +dni : string <<Cedula>>
    +status : string
    +precio_consulta : decimal
    +moneda : string
    --
    +roles()
    +especialidades()
    +patientFlag()
    +pagos()
  }

  class Role {
    +id : bigint
    +name : string
    --
    +users()
  }

  class Especialidad {
    +id : bigint
    +nombre : string
    +activo : boolean
    +orden : int
    --
    +doctores()
  }

  class PatientFlag {
    +id : bigint
    +user_id : bigint
    +adulto_mayor : boolean
    +embarazo : boolean
    +discapacidad : boolean
    +cronico : boolean
    --
    +user()
  }
}

package "Agenda y atencion" {
  class Horario {
    +id : bigint
    +doctor_id : bigint
    +fecha : date
    +hora_inicio : time
    +hora_fin : time
    +intervalo_minutos : int
    --
    +doctor()
    +citas()
  }

  class Cita {
    +id : bigint
    +paciente_id : bigint
    +doctor_id : bigint
    +especialidad_id : bigint
    +fecha : date
    +hora : time
    +motivo_consulta : string
    +estado : string
    +activo : boolean
    +prioridad_nivel : string
    --
    +paciente()
    +doctor()
    +especialidad()
    +factura()
    +pago()
    +receta()
    +notaSoap()
    +laboratorioOrden()
  }

  class CitaEvento {
    +id : bigint
    +cita_id : bigint
    +user_id : bigint
    +tipo : string
    +de_estado : string
    +a_estado : string
    +valor_anterior : string
    +valor_nuevo : string
    +comentario : string
    --
    +cita()
  }

  class NotaSoap {
    +id : bigint
    +cita_id : bigint
    +estado : string
    +signed_at : datetime
    +signed_by : bigint
    --
    +cita()
    +diagnosticos()
    +enmiendas()
    +firmadaPor()
  }

  class NotaSoapDiagnostico {
    +id : bigint
    +nota_soap_id : bigint
    +tipo : string
    +texto : string
    +cie10 : string
    --
    +nota()
  }

  class NotaSoapEnmienda {
    +id : bigint
    +nota_soap_id : bigint
    +user_id : bigint
    +motivo : text
    +contenido : text
    --
    +nota()
    +autor()
  }

  class Receta {
    +id : bigint
    +cita_id : bigint
    +diagnostico : text
    +medicamentos : text
    +indicaciones : text
    +pdf_path : string
    +enviado_en : datetime
    --
    +cita()
  }

  class LaboratorioOrden {
    +id : bigint
    +cita_id : bigint
    +solicitante_id : bigint
    +origen : string
    +prioridad : string
    +tipo_examen : string
    +estado : string
    +resultado_path : string
    --
    +cita()
    +solicitante()
  }
}

package "Laboratorio catalogado" {
  class LabTest {
    +id : bigint
    +nombre : string
    +tipo : string
    +categoria : string
    +requiere_orden : boolean
    +es_rutina : boolean
    +activo : boolean
    --
    +orderItems()
  }

  class MedicalOrder {
    +id : bigint
    +patient_id : bigint
    +doctor_id : bigint
    +lab_test_id : bigint
    +status : string
    --
    +patient()
    +doctor()
    +labTest()
  }

  class LabOrder {
    +id : bigint
    +patient_id : bigint
    +source : string
    +doctor_id : bigint
    +medical_order_id : bigint
    +priority : string
    +status : string
    +scheduled_at : datetime
    --
    +patient()
    +doctor()
    +medicalOrder()
    +items()
  }

  class LabOrderItem {
    +id : bigint
    +lab_order_id : bigint
    +lab_test_id : bigint
    +preparacion_snapshot : text
    +indicaciones_snapshot : text
    +resultado_url : string
    --
    +order()
    +test()
  }
}

package "Facturacion y pagos" {
  class Factura {
    +id : bigint
    +cita_id : bigint
    +paciente_id : bigint
    +doctor_id : bigint
    +moneda : string
    +subtotal : decimal
    +total : decimal
    +estado : string
    --
    +cita()
    +paciente()
    +doctor()
    +items()
  }

  class FacturaItem {
    +id : bigint
    +factura_id : bigint
    +descripcion : string
    +cantidad : int
    +precio_unitario : decimal
    +total_linea : decimal
    --
    +factura()
  }

  class Pago {
    +id : bigint
    +cita_id : bigint
    +paciente_id : bigint
    +folio_unico : string
    +token_publico : string
    +monto : decimal
    +metodo_pago : string
    +estado : string
    --
    +cita()
    +paciente()
    +aprobador()
    +creador()
    +statusLogs()
    +receipt()
  }

  class PaymentStatusLog {
    +id : bigint
    +pago_id : bigint
    +estado_anterior : string
    +estado_nuevo : string
    +actor_id : bigint
    --
    +pago()
    +actor()
  }

  class PaymentReceipt {
    +id : bigint
    +pago_id : bigint
    +folio_recibo : string
    +emitido_en : datetime
    +emitido_por : bigint
    +monto : decimal
    +pdf_path : string
    --
    +pago()
    +emisor()
    +logs()
  }

  class PaymentReceiptLog {
    +id : bigint
    +payment_receipt_id : bigint
    +estado_anterior : string
    +estado_nuevo : string
    +actor_id : bigint
    --
    +receipt()
    +actor()
  }

  class BookingOverrideLog {
    +id : bigint
    +paciente_id : bigint
    +actor_id : bigint
    +cita_id : bigint
    +motivo : text
    --
    +paciente()
    +actor()
    +cita()
  }
}

User "0..*" -- "0..*" Role : role_user
User "0..*" -- "0..*" Especialidad : doctor_especialidad
User "1" -- "0..1" PatientFlag

User "1" <-- "0..*" Horario : doctor_id
User "1" <-- "0..*" Cita : paciente_id
User "1" <-- "0..*" Cita : doctor_id
Especialidad "1" <-- "0..*" Cita : especialidad_id

Cita "1" -- "0..*" CitaEvento
Cita "1" -- "0..1" NotaSoap
NotaSoap "1" -- "0..*" NotaSoapDiagnostico
NotaSoap "1" -- "0..*" NotaSoapEnmienda
User "0..1" <-- "0..*" NotaSoap : signed_by
User "0..1" <-- "0..*" NotaSoapEnmienda : user_id
Cita "1" -- "0..1" Receta
Cita "1" -- "0..1" LaboratorioOrden
User "0..1" <-- "0..*" LaboratorioOrden : solicitante_id

User "1" <-- "0..*" MedicalOrder : patient_id
User "1" <-- "0..*" MedicalOrder : doctor_id
LabTest "1" <-- "0..*" MedicalOrder
User "1" <-- "0..*" LabOrder : patient_id
User "0..1" <-- "0..*" LabOrder : doctor_id
MedicalOrder "0..1" <-- "0..*" LabOrder : medical_order_id
LabOrder "1" -- "0..*" LabOrderItem
LabTest "1" <-- "0..*" LabOrderItem

Cita "1" -- "0..1" Factura
Factura "1" -- "1..*" FacturaItem
User "1" <-- "0..*" Factura : paciente_id
User "1" <-- "0..*" Factura : doctor_id
Cita "1" -- "0..1" Pago
User "1" <-- "0..*" Pago : paciente_id
User "0..1" <-- "0..*" Pago : aprobado_por
User "0..1" <-- "0..*" Pago : creado_por
Pago "1" -- "0..*" PaymentStatusLog
Pago "1" -- "0..1" PaymentReceipt
PaymentReceipt "1" -- "0..*" PaymentReceiptLog
User "0..1" <-- "0..*" PaymentStatusLog : actor_id
User "0..1" <-- "0..*" PaymentReceipt : emitido_por
User "0..1" <-- "0..*" PaymentReceiptLog : actor_id
User "1" <-- "0..*" BookingOverrideLog : paciente_id
User "0..1" <-- "0..*" BookingOverrideLog : actor_id
Cita "0..1" <-- "0..*" BookingOverrideLog : cita_id

note right of CitaEvento
Observacion:
el modelo declara paciente() y doctor(),
pero las migraciones inspeccionadas de
cita_eventos no crean paciente_id ni
doctor_id. Aqui solo se modela la
relacion segura con Cita.
end note

note right of Horario
Observacion:
`Horario::citas()` apunta a `horario_id`,
pero esa columna no aparece en las
migraciones inspeccionadas de
`citas_medicas`. Por eso no se dibujo
una asociacion directa con Cita.
end note

@enduml
